// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`discover — hentai > search: kayanettori 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "KayaNetori Kaya-Nee Series Aizou Ban",
    "year": 2018,
  },
]
`;

exports[`discover — hentai > search: tsumatorare 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Tsumatorare",
    "year": 2018,
  },
]
`;

exports[`discover — manga > search: Berserk 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk",
    "year": 1989,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk Gaiden",
    "year": 1997,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk Official Guidebook",
    "year": 2016,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Bousou Honnou Melancholia",
    "year": 2012,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Heartache",
    "year": 2014,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Lightning",
    "year": 2012,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Cruel",
    "year": 2012,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Toxic",
    "year": 2014,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Sway",
    "year": 2012,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "The Artwork of Berserk (Artbook)",
    "year": 2021,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Cloud 9",
    "year": 2016,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Original Sin",
    "year": null,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Patapata Rosine!!",
    "year": 2016,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Needle Punishment",
    "year": 2006,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Teenage Dream",
    "year": 2012,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Sacrifice",
    "year": null,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Black Out",
    "year": 2017,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Tantei Akechi wa Kyouran su",
    "year": 2017,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Living in Sin",
    "year": 2012,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Sacrifice (Killer Bambi)",
    "year": 2013,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Berserk dj - Kuru Kuru Sonia",
    "year": 2011,
  },
  {
    "author": "Daisuke Takino",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Berserk of Gluttony",
    "year": 2018,
  },
  {
    "author": "Kentarou Miura",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Berserk: The Prototype",
    "year": 1988,
  },
  {
    "author": "Ichika Isshiki",
    "content_type": "novel",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Berserk of Gluttony",
    "year": 2017,
  },
  {
    "author": "Hajime Asano",
    "content_type": "novel",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Isekai Guild no Berserk",
    "year": 2016,
  },
  {
    "author": "Tian Cang Zi Dongman",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Jueshi Zhan Hun",
    "year": 2015,
  },
  {
    "author": "Kentarou Miura",
    "content_type": "novel",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Berserk: The Flame Dragon Knight",
    "year": 2017,
  },
  {
    "author": "Kentarou Miura",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Berserk: Shinen no Kami 2",
    "year": 1996,
  },
  {
    "author": "Honey Boy",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Ripple: Berserker",
    "year": 2022,
  },
  {
    "author": "Ryouma Matsuka",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Alchemic Girl x Berserker Boy",
    "year": 2024,
  },
  {
    "author": "Lia Luna",
    "content_type": "novel",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Majutsu Gakuen Ryouiki no Berserker",
    "year": 2017,
  },
  {
    "author": "Cuvie",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Delicacy",
    "year": 2003,
  },
  {
    "author": "Ena Fujiwara",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "I'll Even Take Care of Dad! A Hot Male Nursery Teacher Goes Berserk",
    "year": 2012,
  },
]
`;

exports[`discover — manga > search: Vagabond 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Vagabond",
    "year": 1998,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Sensai Vagabond",
    "year": 2020,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Rurouni Kenshin",
    "year": 1994,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Girls Be Vagabond",
    "year": 2008,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Akujo ni Naritai",
    "year": 2013,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Vagabond Illustration Collection",
    "year": 2008,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Dokudami-Sou",
    "year": 1980,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Exhibition Catalog INOUENO: Mangetsu Edition",
    "year": 2008,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Exhibition Catalog INOUENO: Mikazuki Edition",
    "year": 2008,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Hanashippanashi",
    "year": 1994,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Vagabond: Son of Darkness",
    "year": null,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Nora Neko - Gatti vagabondi",
    "year": 2016,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Vagabond: Saigo no Manga-ten",
    "year": 2008,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Mushoku Tensei: Isekai Ittara Honki Dasu",
    "year": 2014,
  },
  {
    "author": "Tadao Tsuge",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Burai Heiya",
    "year": 1994,
  },
  {
    "author": "Tadao Tsuge",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Vagabond Plain",
    "year": 1975,
  },
  {
    "author": "Da Xia",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Chang Ge Xing",
    "year": 2011,
  },
]
`;

exports[`discover — manga > search: Vinland Saga 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "VINLAND SAGA",
    "year": 2005,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Finland Saga",
    "year": 2009,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Apaimanee Saga",
    "year": 2001,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Genei Kitan",
    "year": 1997,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Orfina Saga",
    "year": 2005,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Sivern Saga",
    "year": 1992,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Unbalanced Saga",
    "year": 1997,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Devilman Saga",
    "year": 2014,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Garudayana",
    "year": 2009,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Gourmand Saga",
    "year": 1995,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Ixion Saga",
    "year": 2012,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Mazin Saga",
    "year": 1990,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Beast Saga",
    "year": 2012,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "DQN Saga",
    "year": 2021,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Mugen Densetsu Takamagahara",
    "year": 1997,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Hortensia Saga",
    "year": 2020,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Ikinari Saga",
    "year": 1988,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Romsen Saga",
    "year": 2013,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Seventh Saga",
    "year": 1995,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Vaelber Saga",
    "year": 1988,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Zao Saga",
    "year": 2023,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Fortune Saga",
    "year": 1997,
  },
  {
    "author": "Makoto Yukimura",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Assassin's Creed: Valhalla x Vinland Saga",
    "year": 2020,
  },
  {
    "author": null,
    "content_type": "hentai",
    "is_explicit": true,
    "source": "nhentai",
    "status": "complete",
    "title": "Vinland Saga",
    "year": null,
  },
]
`;

exports[`discover — manhwa > search: Solo Leveling 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Fullmetal Alchemist dj - Hitori Asobi",
    "year": 2004,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Solo Sex",
    "year": 2006,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Cinta Solo",
    "year": 2024,
  },
  {
    "author": "Seong-Rak Jang",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Solo Leveling",
    "year": 2018,
  },
  {
    "author": "REDICE",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Solo Leveling: Ragnarok",
    "year": 2024,
  },
  {
    "author": "Yi Cheng",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "The Privilege of the Second Life is Power Leveling",
    "year": 2024,
  },
  {
    "author": null,
    "content_type": "novel",
    "is_explicit": false,
    "source": "wuxiaworld",
    "status": "ongoing",
    "title": "Solo Leveling: Ragnarok",
    "year": null,
  },
  {
    "author": null,
    "content_type": "hentai",
    "is_explicit": true,
    "source": "nhentai",
    "status": "complete",
    "title": "Solo Leveling",
    "year": null,
  },
]
`;

exports[`discover — manhwa > search: Tower of God 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Campanella no Tou",
    "year": 2024,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Hanabira no Tou",
    "year": 1989,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Kairaku no Tou",
    "year": 2001,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Benibara no Densetsu",
    "year": 2001,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Karuma no Tou",
    "year": 2023,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Chuuka Ichiban!",
    "year": 1995,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Babel Shiki Kami Girl",
    "year": 2014,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Mirai no Utena",
    "year": 1994,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "The Tower of Aion",
    "year": 2011,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Omokage o Motomete",
    "year": 2008,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Taiyou no Tou",
    "year": 2018,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Tou o Mamoru Kifujin",
    "year": 2015,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Genshi Otome to Kami no Tou",
    "year": 2014,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Asklepios",
    "year": 2008,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Ekishin",
    "year": 2007,
  },
  {
    "author": "SIU",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Tower of God",
    "year": 2010,
  },
  {
    "author": "SIU",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Tower of God: Urek Mazino",
    "year": 2025,
  },
]
`;

exports[`discover — novel > search: A Will Eternal 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "A Will",
    "year": 2016,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Sonoyo no Dokoka, Tokoyo no Rakuen",
    "year": 2019,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Eikyuu Shoujo (OGURA Akane)",
    "year": 2013,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Eien no wa",
    "year": 2020,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Shinjitsu no Hokan",
    "year": 2001,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Otome no Yuigon",
    "year": 1989,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Mannenyuki no Moeru Ie",
    "year": 1979,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Naruto dj - A Will",
    "year": null,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Eien no Kodou",
    "year": 2011,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Eikyuukei",
    "year": 2022,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Eternal Eyes",
    "year": 2001,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Eternal Heart",
    "year": 2000,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Eternal Wind",
    "year": 1995,
  },
  {
    "author": "Ergen",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "An Eternal Will",
    "year": 2020,
  },
  {
    "author": "Nagisa Yuu",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Kimi no Tonari de Nemuritai",
    "year": 1998,
  },
  {
    "author": "Miwa Sakai",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eien no Labyrinth",
    "year": 2001,
  },
  {
    "author": "Hoshi Itsuki",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eternal Arcadia",
    "year": null,
  },
  {
    "author": "Akane Ogura",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eikyuu Shoujo",
    "year": 2013,
  },
  {
    "author": "Mieko Ousaka",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eien no Nohara",
    "year": 1989,
  },
  {
    "author": "Miu Ootsuki",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eien no Shichigatsu",
    "year": 2006,
  },
  {
    "author": "Natsumi Andou",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Something's Wrong With Us: Sakura-Colored Verse",
    "year": 2021,
  },
  {
    "author": "San Qian Wa",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eternal Club",
    "year": 2021,
  },
  {
    "author": "Hae-Jin",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Eternal Covenant",
    "year": 2021,
  },
  {
    "author": "Meng Ru Shen Ji",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Yong Sheng",
    "year": 2022,
  },
  {
    "author": "Yi Tong",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "The Eternal Kingdom",
    "year": 2022,
  },
  {
    "author": "Ulli",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Never-Ending Darling",
    "year": 2021,
  },
  {
    "author": "Da Xia",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Jiang Ai",
    "year": 2011,
  },
  {
    "author": "Haruhito Akahoshi",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eien Toshokan",
    "year": 2009,
  },
  {
    "author": "Nodoka Tsurimaki",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Kuon no Mori",
    "year": 2007,
  },
  {
    "author": "Naoki Hyakuta",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eien no Zero",
    "year": 2010,
  },
  {
    "author": "Yukariko Jissoji",
    "content_type": "novel",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Eternal Love",
    "year": 2007,
  },
  {
    "author": "Hiina Maki",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Amorous Kiss",
    "year": 2002,
  },
  {
    "author": "Jun Kajimoto",
    "content_type": "manga",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Happy Honey Life",
    "year": 2002,
  },
  {
    "author": "Jian You Tai Xu",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "Yong Heng Zhi Zun",
    "year": 2017,
  },
  {
    "author": "Yi Tong",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "cancelled",
    "title": "Yongheng Guodu",
    "year": 2021,
  },
  {
    "author": "zero",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Eternal Love",
    "year": 2022,
  },
  {
    "author": "Jin-Hwan Park",
    "content_type": "manhwa",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "The Breaker: Eternal Force",
    "year": 2022,
  },
  {
    "author": "Hitomaru",
    "content_type": "novel",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "The Spirit of Eternity Sword",
    "year": 2004,
  },
  {
    "author": "Daiji",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Eternal Fate",
    "year": 2022,
  },
  {
    "author": "Daiji",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Oniai",
    "year": 2024,
  },
  {
    "author": "Hocco",
    "content_type": "manhwa",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Odd Relations: Bonded for Eternity",
    "year": 2025,
  },
  {
    "author": "Yeo-Nu",
    "content_type": "manhwa",
    "is_explicit": true,
    "source": "anilist",
    "status": "ongoing",
    "title": "Eternal Flame",
    "year": 2025,
  },
  {
    "author": "Makio",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Eien no Shouzou",
    "year": 2013,
  },
  {
    "author": "Nire",
    "content_type": "manhwa",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Yeongwonui Seonsaengnim",
    "year": 2022,
  },
  {
    "author": "Sa-Geum",
    "content_type": "manhwa",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Odd Relations",
    "year": 2025,
  },
  {
    "author": "Wanyan Aguda",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Round Shell",
    "year": 2004,
  },
  {
    "author": "Nikke Taino",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "A Paradise of Eternal Night",
    "year": 2019,
  },
  {
    "author": "Wanyan Aguda",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Kuro Loli: Black Lolita Field",
    "year": 2009,
  },
  {
    "author": "Takuto Shiki",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "The Girls in the Eternal Spring",
    "year": 2013,
  },
  {
    "author": "Hayashi Sasagawa",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Koi Koku",
    "year": 2005,
  },
  {
    "author": "Heki Hodaka",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "Eternal Request at 2 a.m.",
    "year": 2022,
  },
  {
    "author": "Mon Inoe",
    "content_type": "manga",
    "is_explicit": true,
    "source": "anilist",
    "status": "complete",
    "title": "The Eternal Spark Of Our Love",
    "year": 2021,
  },
  {
    "author": null,
    "content_type": "novel",
    "is_explicit": false,
    "source": "wuxiaworld",
    "status": "complete",
    "title": "A Will Eternal",
    "year": null,
  },
]
`;

exports[`discover — novel > search: I Shall Seal the Heavens 1`] = `
[
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Boku wa Konomama Kaeranai",
    "year": 1992,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Azarashi no Takeda-kun",
    "year": 2018,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": true,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Naka Secha Ooka",
    "year": 2004,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Potion-danomi de Ikinobimasu!",
    "year": 2017,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Aldnoah Zero",
    "year": 2014,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Sora no Method",
    "year": 2014,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Heavens",
    "year": 1999,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Saki dj - Shall I Help?",
    "year": null,
  },
  {
    "author": null,
    "content_type": "manga",
    "is_explicit": false,
    "source": "mangaupdates",
    "status": "unknown",
    "title": "Potion-danomi de Ikinobimasu! Zoku",
    "year": 2022,
  },
  {
    "author": "Ergen",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "complete",
    "title": "I Shall Seal The Heavens",
    "year": 2017,
  },
  {
    "author": "Ergen",
    "content_type": "manhua",
    "is_explicit": false,
    "source": "anilist",
    "status": "ongoing",
    "title": "Wo Yu Feng Tian",
    "year": 2025,
  },
  {
    "author": null,
    "content_type": "novel",
    "is_explicit": false,
    "source": "wuxiaworld",
    "status": "complete",
    "title": "I Shall Seal the Heavens",
    "year": null,
  },
]
`;
